# algorithms

c/: CMakeLists.txt  setup.md
c/src/: element.h  stack.c  stack.h
cpp/: .gitignore  CMakeLists.txt  setup.md
cpp/src/: CMakeLists.txt  stack.cpp
cpp/src/data-structures/: CMakeLists.txt  stack.cpp
cpp/src/sorting/: CMakeLists.txt  insertion-sort.cpp  merge-sort.cpp
cpp/src/utility/: CMakeLists.txt  utility.cpp
cpp/test/: CMakeLists.txt
cpp/test/sorting/: CMakeLists.txt  sorting-test.cpp
python/: setup.md  stack.ipynb
swift/: setup.md
swift/stack.playground/Sources/: stack.swift
